# gtc

./: .coveragerc  .darglint  .editorconfig  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.in  requirements_all.txt  requirements_dev.in  requirements_dev.txt  requirements_fixed.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cpp.yml  gh-pages.yml  pytest.yml  python.yml
.gitpod/: aliases.txt
.theia/: settings.json  tasks.json
TARGET_FOLDER/eve/: search.html
TARGET_FOLDER/eve/_modules/: index.html  typing.html
TARGET_FOLDER/eve/_modules/eve/: traits.html  tree_utils.html  visitors.html
TARGET_FOLDER/gt_frontend/: .buildinfo  genindex.html  index.html  py-modindex.html  searchindex.js
TARGET_FOLDER/gt_frontend/_modules/gt_frontend/: gtscript_ast.html
TARGET_FOLDER/gtc/: license.html
TARGET_FOLDER/gtc/_sources/_source/: modules.rst.txt
cpputil/unstructured/: .gitignore  CMakeLists.txt  README.md  atlas_array_view_adapter.cc  atlas_field_converter.cc  atlas_field_converter.cu  atlas_mesh_adapter.cc  compile_commands.json  prototype.cc
cpputil/unstructured/gencode/: CMakeLists.txt
cpputil/unstructured/gencode/include/gridtools/next/: atlas_adapter.hpp  atlas_array_view_adapter.hpp  atlas_field_util.hpp  mesh.hpp  sid_rename_all.hpp  tmp_gpu_storage.hpp  unstructured.hpp  unstructured_helper.hpp
cpputil/unstructured/include/gridtools/next/: atlas_adapter.hpp  iteration_space.hpp  mesh.hpp  tmp_gpu_storage.hpp
cpputil/unstructured/include/gridtools/next/test_helper/: field_builder.hpp  simple_mesh.hpp
cpputil/unstructured/tests/: CMakeLists.txt
cpputil/unstructured/tests/include/util/: atlas_util.hpp
cpputil/unstructured/tests/regression/fvm_nabla/: CMakeLists.txt  driver.cc  nabla_cuda.hpp  nabla_naive.hpp
cpputil/unstructured/tests/unit_tests/: CMakeLists.txt
cpputil/unstructured/tests/unit_tests/gencode/next/: CMakeLists.txt  test_atlas_array_view_adapter.cc  test_atlas_field_util.cc
cpputil/unstructured/tests/unit_tests/next/: CMakeLists.txt  test_iteration_space.cc
cpputil/unstructured/tests/unit_tests/next/test_helper/: CMakeLists.txt  test_field_builder.cc  test_simple_mesh.cc
cpputil/unstructured/tests/util/: atlas_util.hpp
docs/: .gitignore  Makefile  apiref.rst  conf.py  index.rst
docs/eve/: Makefile  conf.py
docs/gt_frontend/: Makefile  conf.py  index.rst  language_reference.rst
docs/gtc/: Makefile  conf.py
docs/latest/eve/: .buildinfo  apiref.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/latest/gt_frontend/: .buildinfo  apiref.html  genindex.html  index.html  language_reference.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/latest/gtc/: .buildinfo  apiref.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: cell_example.py  demo.ipynb  naive_unstructured_codegen.py  sir_unstructured_copy.py
examples/unstructured/: cell_cell_reduction.py  cell_example.py  frontend.py  fvm_nabla.py  simple_reduction_codegen.py  sir_unstructured_copy.py
examples/unstructured/fvm/: CMakeLists.txt  fvm_nabla.py  fvm_nabla_atlas_driver.cpp  fvm_nabla_atlas_driver.py  fvm_nabla_gtir.py  fvm_nabla_ugpu.py  fvm_nabla_ugpu2.py  fvm_nabla_usid.py  fvm_nabla_wrapper.cpp  path_visitor.py
examples/unstructured/fvm/dawn/driver-includes/: defs.hpp  extent.hpp  unstructured_interface.hpp
examples/unstructured/fvm/dawn/interface/: atlas_interface.hpp
scripts/: activate  activate.bash  bootstrap.sh  init_env.py  init_env.sh  lint_docs.sh  update_requirements.sh
src/eve/: .gitignore  _VERSION.txt  __init__.py  _version.py  codegen.py  concepts.py  core.py  exceptions.py  ir.py  traits.py  transformations.py  tree_utils.py  types.py  typing.py  utils.py  version.py  visitors.py
src/eve/dialects/: builtin.py
src/eve/ir/: gt_ir.py  impl_ir.py
src/gt_frontend/: __init__.py  ast_node_matcher.py  built_in_types.py  frontend.py  gtscript.py  gtscript_ast.py  gtscript_to_gtir.py  playground.py  py_to_gtscript.py
src/gt_toolchain/: __init__.py  common.py  sir.py  version.py
src/gt_toolchain/structured/: common.py  gt_ir.py
src/gt_toolchain/unstructured/: common.py  gtir.py  gtir_to_nir.py  mlir_loop.py  naive.py  naive_codegen.py  nir.py  nir_to_ugpu.py  sir.py  sir_to_naive.py  ugpu.py  ugpu_codegen.py
src/gtc/: common.py  sir.py
src/gtc/structured/: common.py  gt_ir.py
src/gtc/unstructured/: gtir.py  gtir_to_nir.py  naive.py  naive_codegen.py  nir.py  nir_to_ugpu.py  nir_to_ugpu2.py  nir_to_usid.py  sir_to_naive.py  ugpu.py  ugpu2.py  ugpu2_codegen.py  ugpu_codegen.py  unaive_codegen.py  usid_codegen.py
tests/: .gitignore  common.py  conftest.py
tests/eve/unit_tests/: stencil_definitions.py  test_frontend.py
tests/gt_toolchain/: nir_utils.py  test_infer_local_variable_location_type.py  test_nir_field_dependency_graph.py  test_nir_merge_horizontal_loops.py  util.py
tests/gt_toolchain/lit_codegen_suite/: lit.cfg  naive_unstructured.py  naive_unstructured_codegen.py
tests/gtc/: nir_utils.py  test_code_generation.py  test_infer_local_variable_location_type.py  test_nir_field_dependency_graph.py  test_nir_merge_horizontal_loops.py
tests/gtc/lit_codegen_suite/: naive_unstructured_codegen.py
tests/gtc/regression/cpp/: CMakeLists.txt  cell2cell.py  cell2cell_driver.cc  cell2cell_driver.cu  cell2cell_sparse.py  fvm_nabla.py  generated_cell2cell.hpp  generated_vertex2edge.hpp  tmp_field.py  vertex2edge.py  vertex2edge_driver.cc  vertex2edge_driver.cu
tests/test_units/: __init__.py  test_core.py  test_transformations.py
tests/tests_eve/: common.py  conftest.py
tests/tests_eve/unit_tests/: test_codegen.py  test_concepts.py  test_utils.py
tests/tests_gtc/: test_code_generation.py
tests/tests_gtc/lit_codegen_suite/: lit.cfg  naive_unstructured_codegen.py
tests/unit_tests/: stencil_definitions.py  test_concepts.py  test_core.py  test_frontend.py  test_transformations.py
(+127 files in other folders)
