[build-system]
requires = ["setuptools>=40.8.0", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.gt_cache
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
write_to = "src/eve/_VERSION.txt"
