[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.gt_cache
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.setuptools_scm]
fallback_version = "X.X.X.unknown"
local_scheme = "node-and-date"
version_scheme = "python-simplified-semver"
write_to = "src/eve/_VERSION.txt"
write_to_template = "{version}\n"
