[metadata]
name = eve
author = Enrique G. Paredes
author_email = enriqueg@cscs.ch
description = A stencil toolchain in pure Python
url = https://github.com/egparedes/eve
keywords =
  stencil
  toolchain
  dsl
  compiler
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Atmospheric Science
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
long_description = file: README.md
long_description_content_type = text/markdown
license = gpl3
license_files =
  LICENSE.txt
platforms = Linux, Mac

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
  =src
python_requires = >=3.6
install_requires =
  devtools~=0.5
  jinja2~=2.10
  #objectpath~=0.6
  packaging~=20.0
  pydantic~=1.0
  typing_extensions~=3.4

[options.extras_require]
cpp =
    clang-format

[options.packages.find]
where=src

[flake8]
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.ipynb_checkpoints,.pytest_cache,.hypothesis,.coverage,.cache
max-line-length = 120
#show-source = true
ignore = D102,D105,D107
#-- flake8-docstrings --
docstring-convention = google
#-- flake8-import-order --
application-import-names = eve
import-order-style = smarkets

[mypy]
allow_redefinition = True
warn_unused_configs = True
