# Main settings file for setuptools and other tools with no specific config file

[metadata]
name = eve
author = Enrique G. Paredes
author_email = enriqueg@cscs.ch
description = A stencil toolchain in pure Python
url = https://github.com/egparedes/eve
keywords =
  stencil
  toolchain
  dsl
  compiler
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Atmospheric Science
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
long_description = file: README.md
long_description_content_type = text/markdown
license = gpl3
license_files =
  LICENSE.txt
platforms = Linux, Mac

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
  =src
python_requires = >=3.6
setup_requires =
  setuptools_scm[toml]>=3.4
install_requires =
  black>=19.3b0
  devtools~=0.5
  jinja2~=2.10
  mako~=1.1
  packaging~=20.0
  pydantic~=1.0
  typing_extensions~=3.4
  # -- gt_toolchain --
  filecheck>=0.0.13
  lit>=0.10

[options.extras_require]
cpp =
  clang-format

[options.packages.find]
where = src

[bdist_wheel]
python-tag = py36

[mypy]
allow_redefinition = True
warn_unused_configs = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = False
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True
